Added information about the departments

--- a/dept.html
+++ b/dept.html
@@ -22,7 +22,7 @@
             <li><a href="#dept5">Commerce</a></li>
         </ul>
     </div>
-
+    
     <div class="content">
         <div class="depts CS">
             <a name="dept1"></a>
@@ -30,20 +30,36 @@
             <p>At DAV College, our Computer Science department stands at the forefront of technological innovation and education. Our mission is to empower students with the knowledge, skills, and experiences necessary to excel in the rapidly evolving field of computer science. With a diverse and accomplished faculty leading the way, our department offers a comprehensive range of academic programs, from undergraduate degrees to doctoral studies, covering areas such as artificial intelligence, cybersecurity, and software engineering. Our students benefit from hands-on learning experiences in state-of-the-art labs and research facilities, where they collaborate with faculty on cutting-edge research projects. Beyond the classroom, we provide extensive support and resources, including academic advising, internships, and career placement assistance, to ensure our students are well-prepared for success in their future endeavors. Whether pursuing a career in industry, academia, or entrepreneurship, graduates of our Computer Science program emerge as leaders and innovators poised to make a meaningful impact in the digital world.</p>
 
         </div>
-        <div class="img"></div>
+        <div class="img" style="background-image: url(images/CS.jpg)"></div>
         
-        <div class="depts">
-
+        <div class="depts Maths">
+            <a name="dept2"></a>
+            <h2>Department of Mathematics</h2>
+            <p>At DAV College, our Mathematics department is dedicated to fostering a deep understanding and appreciation for the beauty and power of mathematics. With a team of passionate and accomplished faculty members at its helm, the department offers a diverse array of academic programs tailored to suit the needs and interests of students at every level. From foundational courses in calculus and algebra to advanced studies in areas such as number theory, differential equations, and mathematical modeling, our curriculum is designed to challenge and inspire. Through rigorous coursework and hands-on problem-solving experiences, students develop critical thinking skills and mathematical fluency that are invaluable in a wide range of fields, from engineering and finance to computer science and beyond. Beyond the classroom, our department provides numerous opportunities for research, collaboration, and community engagement, empowering students to explore the boundless applications and possibilities of mathematics. Whether pursuing a career in academia, industry, or any other field, graduates of our Mathematics program emerge with the analytical prowess and intellectual curiosity needed to thrive in today's complex world.</p>
         </div>
-        <div class="depts">
+        <div class="img" style="background-image: url(images/Maths.jpg)"></div>
 
+        <div class="depts English">
+            <a name="dept3"></a>
+            <h2>Department of English</h2>
+            <p>At DAV College, our English department is a vibrant community of scholars, writers, and literary enthusiasts dedicated to exploring the richness and diversity of language and literature. With a distinguished faculty passionate about the written word, we offer a comprehensive range of courses and programs designed to deepen students' understanding of literature, language, and culture. From foundational courses in grammar and composition to advanced seminars in literary theory, creative writing, and rhetoric, our curriculum provides students with the critical thinking skills, analytical tools, and creative abilities necessary for success in a variety of fields. Through close reading, lively discussions, and hands-on writing workshops, students engage with a wide range of texts, from classic literature to contemporary works, and develop their own unique voices as writers and scholars. Beyond the classroom, our department sponsors a variety of events, including readings, lectures, and writing competitions, fostering a dynamic intellectual community where students can connect with peers, faculty, and visiting writers. Whether pursuing a career in publishing, education, journalism, or any other field, graduates of our English program emerge as thoughtful, articulate, and culturally literate individuals ready to make a meaningful impact in the world</p>
         </div>
-        <div class="depts">
+        <div class="img" style="background-image: url(images/English.jpg)"></div>
 
+        <div class="depts Botany">
+            <a name="dept4"></a>
+            <h2>Department of Botany</h2>
+            <p>At DAV College, our Botany department is dedicated to the study and exploration of the fascinating world of plants and their ecosystems. Led by a team of passionate botanists and researchers, our department offers a comprehensive array of academic programs tailored to students' interests in plant biology, ecology, and conservation. From introductory courses in plant anatomy and taxonomy to advanced studies in plant genetics, ecology, and biotechnology, our curriculum provides students with a strong foundation in the fundamental principles of botany and hands-on experience in field and laboratory research. Through field trips, internships, and research opportunities, students have the chance to explore diverse ecosystems, from local forests and wetlands to global biodiversity hotspots, and contribute to cutting-edge research projects aimed at understanding and preserving plant life. Beyond the classroom, our department sponsors seminars, workshops, and botanical gardens, providing students with opportunities to engage with experts in the field and gain practical skills in plant identification, cultivation, and conservation. Whether pursuing a career in environmental science, agriculture, pharmaceuticals, or any other field, graduates of our Botany program emerge as stewards of the natural world, equipped with the knowledge and skills to address pressing challenges facing our planet.</p>
         </div>
-        <div class="depts">
+        <div class="img" style="background-image: url(images/Botany.jpg)"></div>
 
+        <div class="depts Commerce">
+            <a name="dept5"></a>
+            <h2>Department of Commerce</h2>
+            <p>At DAV College, our Commerce department is dedicated to equipping students with the knowledge, skills, and insights needed to excel in the dynamic world of business and economics. Led by a team of experienced faculty members with expertise in various fields of commerce, our department offers a diverse range of academic programs tailored to meet the needs and interests of aspiring business professionals. From foundational courses in accounting, economics, and finance to specialized studies in marketing, management, and entrepreneurship, our curriculum provides students with a comprehensive understanding of the principles and practices that drive commerce and industry. Through case studies, simulations, and real-world projects, students gain practical experience in problem-solving, decision-making, and strategic planning, preparing them for success in today's competitive business environment. Beyond the classroom, our department fosters a culture of innovation and collaboration through internships, networking events, and partnerships with local businesses, giving students opportunities to apply their knowledge and skills in real-world settings and build valuable connections with industry professionals. Whether pursuing a career in corporate finance, international trade, or business consulting, graduates of our Commerce program emerge as confident, ethical, and forward-thinking leaders poised to make a positive impact in the global marketplace</p>
         </div>
+        <div class="img" style="background-image: url(images/Commerce.jpg)"></div>
+
     </div>
 
 </body>
