--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="register.html" class="navlink">Registration</a>
         </div>
     </div>
-    <div class="Image"><img src="https://files.yappe.in/place/full/dav-college-5702173.webp" alt=""></div>
+    <div class="Image"><img src="images/DAVCollege.webp" alt=""></div>
     </div>
 </body>
 </html>
